--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
               <img class="feedback-img" src="images/illustration-3.png" alt="img">
             </div>
             <div class="col-md-10 col-lg-6 col-xl-5 form-wrapper">
-              <form action="" method="POST">
+              <form method="POST">
                 <div>
                   <label for="name-id" class="form-label">Ваше имя</label>
                   <input
@@ -401,10 +401,10 @@
         </div>
         <div class="row">
           <div class="col-sm-6 col-xl-3">
-            <p>Правила использования</p>
+            <a class="footer-link" href="#">Правила использования</a>
           </div>
           <div class="col-sm-6 col-xl-3">
-            <p>Политика конфиденциальности</p>
+            <a class="footer-link" href="#">Политика конфиденциальности</a>
           </div>
         </div>
       </div>
