--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
               <img class="feedback-img" src="images/illustration-3.png" alt="img">
             </div>
             <div class="col-md-10 col-lg-6 col-xl-5 form-wrapper">
-              <form method="POST">
+              <form action="#" method="POST">
                 <div>
                   <label for="name-id" class="form-label">Ваше имя</label>
                   <input
